--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.4",
     "aiomysql>=0.2.0",
-    "apscheduler>=3.11.0",
+    "alembic>=1.14.0",
     "cryptography>=44.0.0",
     "dishka>=1.4.2",
     "fastapi[standard]>=0.115.6",
